manifests/ingress/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bhumika-frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: demo.text2scene.ai
      http:
        paths:
          - backend:
              service:
                name: frontend-frontend-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - hostname: localhost
